Modificación de la información de la barbería

--- a/contacto.html
+++ b/contacto.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Barbería Alura</title>
+    <title>Contacto - Barbería Capitán</title>
+    <link rel="icon" href="img/B.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style-contacto.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Texturina:ital,opsz,wght@1,12..72,100&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <!--Navegacion-->
     <header>
         <div class="caja">
-            <h1><img src="img/logo.png" alt="Logo"></h1>
+            <h1><img src="img/logo.png" alt="Logo" class="logo"></h1>
             <nav>
                 <ul class="navegacion">
                     <li><a href="index.html">Home</a></li>
@@ -57,7 +60,7 @@
             <fieldset>
                 <legend>¿En cuál horario prefiere ser atendido?</legend>
                 <select>
-                    <option>Horario</option>
+                    <option disabled selected>-- Horario --</option>
                     <option>Mañana</option>
                     <option>Tarde</option>
                     <option>Noche</option>
@@ -122,8 +125,8 @@
 
     <!-- copyright -->
     <footer>
-        <img src="img/logo-blanco.png" alt="Logo Blanco">
-        <p class="copyright">&copy Copyright Baebería Alura - 2022</p>
+        <img src="img/logo-cafe_preview_rev_1.png" alt="Logo Blanco">
+        <p class="copyright">&copy Copyright Barbería Capitán - 2022</p>
     </footer>
 </body>
 
