--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barbería Alura</title>
+    <title>Barbería Capitán</title>
+    <link rel="icon" href="img/B.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style-home.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Texturina:ital,opsz,wght@1,12..72,100&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <!--Navegacion-->
     <header class="navegacion">
         <div class="caja">
-            <h1><img src="img/logo.png" alt="Logo"></h1>
+            <h1><img src="img/logo.png" alt="Logo" class="logo"></h1>
             <nav>
                 <ul class="navegacion">
                     <li><a href="index.html">Home</a></li>
@@ -28,28 +31,27 @@
 
     <!-- Titulo principal -->
     <header class="imagen-fondo">
-        <h1 class="titulo-principal">Barbería Alura</h1>
+        <h1 class="titulo-principal">Barbería Capitán</h1>
     </header>
 
     <!-- Main -->
     <main>
         <!--Principal-->
         <section class="principal">
-            <h2 class="titulo">Sobre la Barbería Alura</h2>
+            <h2 class="titulo">Sobre la Barbería Capitán</h2>
 
             <img src="img/tijeras.jpg" alt="Utensilios de un barbero" class="utensilios">
 
             <p>
                 Ubicada en el corazón de la ciudad, la
-                <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor
-                para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque
+                <strong>Barbería Capitán</strong> trae para el mercado lo que hay de mejor
+                para su cabello y barba. Fundada en 2022, la Barbería Capitán ya es destaque
                 en la ciudad y conquista nuevos clientes diariamente.
             </p>
 
             <p id="mision">
                 <em>Nuestra misión es:
-                    <strong>"Proporcionar autoestima y calidad de vida a nuestros
-                        clientes"</strong>.</em>
+                    <strong>"La vida es corta. Disfrútala con un cabello realmente genial"</strong>.</em>
             </p>
 
             <p>
@@ -66,7 +68,7 @@
             <h3 class="titulo">Nuestra Ubicación</h3>
             <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.449977468645!2d-46.63452595002556!3d-23.588189868392114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Education%20and%20Innovation!5e0!3m2!1ses-419!2smx!4v1673295845684!5m2!1ses-419!2smx"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3761.554827660556!2d-99.04533615026651!3d19.474751244315176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fb1ae7b9f1c7%3A0x501a154bf16c02f1!2sFacultad%20de%20Estudios%20Superiores%20Arag%C3%B3n%20UNAM!5e0!3m2!1ses-419!2smx!4v1673394774399!5m2!1ses-419!2smx"
                 width="80%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
@@ -94,13 +96,12 @@
                     allowfullscreen></iframe>
             </div>
         </section>
-
     </main>
 
     <!-- copyright -->
     <footer>
-        <img src="img/logo-blanco.png" alt="Logo Blanco">
-        <p class="copyright">&copy Copyright Baebería Alura - 2022</p>
+        <img src="img/logo-cafe_preview_rev_1.png" alt="Logo Blanco">
+        <p class="copyright">&copy Copyright Barbería Capitán - 2022</p>
     </footer>
 </body>
 
