--- a/productos.html
+++ b/productos.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos - Barbería Alura</title>
+    <title>Productos - Barbería Capitán</title>
+    <link rel="icon" href="img/B.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style-producto.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Texturina:ital,opsz,wght@1,12..72,100&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <!--Navegacion-->
     <header>
         <div class="caja">
-            <h1><img src="img/logo.png" alt="Logo"></h1>
+            <h1><img src="img/logo.png" alt="Logo" class="logo"></h1>
             <nav>
                 <ul class="navegacion">
                     <li><a href="index.html">Home</a></li>
@@ -33,27 +36,27 @@
                 <h2>Cabello</h2>
                 <img src="img/cabello.png" alt="Cabello">
                 <p class="productos-descripcion">Con tijera o máquina, a gusto del cliente.</p>
-                <p class="productos-precio">$193.00</p>
+                <p class="productos-precio">$190.00</p>
             </li>
             <li>
                 <h2>Barba</h2>
                 <img src="img/barba.png" alt="Barba">
                 <p class="productos-descripcion">Corte y diseño profesional de barba.</p>
-                <p class="productos-precio">$154.00</p>
+                <p class="productos-precio">$150.00</p>
             </li>
             <li>
                 <h2>Cabello + Barba</h2>
                 <img src="img/cabello+barba.png" alt="Cabello + barba">
                 <p class="productos-descripcion">Paquete completo de cabello y barba.</p>
-                <p class="productos-precio">$289.00</p>
+                <p class="productos-precio">$280.00</p>
             </li>
         </ul>
     </main>
 
     <!-- copyright -->
     <footer>
-        <img src="img/logo-blanco.png" alt="Logo Blanco">
-        <p class="copyright">&copy Copyright Baebería Alura - 2022</p>
+        <img src="img/logo-cafe_preview_rev_1.png" alt="Logo Blanco">
+        <p class="copyright">&copy Copyright Barbería Capitán - 2022</p>
     </footer>
 </body>
 
